--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <title>Главная - Контрольная работа 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../stl/stl.css">
+    <link rel="stylesheet" href="../stl/stl.css">
 </head>
 
 <body>
-    <header class="site-header elements-align-center">
-        <img src="../pho/Minecraftpho.jpeg" width="100">
-        <span>Иус Владимир Витальевич</span>
+    <header class="cherep">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <span class="sas">Иус Владимир Витальевич</span>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -32,9 +32,9 @@
         </div>
     </nav>
     <main class="container main-margin-top">
-        <article class="container container-intro">
+        <article class="cont-ind">
             <img src="../pho/monk.png" class="i">
-            <div class="container-intro__text">
+            <div class="cont-ind-t">
                 <span>Привет! Я студент группы ЭФБО-06-24<br>Увлекаюсь веб-разработкой</span>
                 <button class="btn btn-primary container-intro__text">Скачать резюме</button>
             </div>
@@ -62,9 +62,9 @@
                 <div class="progress-bar" style="width: 50%"></div>
             </div>
         </article>
-        <article class="container main-margin-top">
+        <article>
             <h2 class="text-center">Лучшие проекты</h2>
-            <div class="container-projects">
+            <div class="ccont-ind">
                 <div class="card" style="width: 18rem;">
                     <img src="../pho/veb.jpeg" class="card-img-top" alt="Проект 1">
                     <div class="card-body">
@@ -86,9 +86,9 @@
             </div>
         </article>
     </main>
-    <footer class="site-footer main-margin-top">
-        <span>&copy; 2025</span>
-        <a href="conts.html" class="footer-contacts">Контакты</a>
+    <footer>
+        <span>&copy; 2025 Свяжитесь с нами -> </span>
+        <a href="conts.html" class="footer-contacts"> Контакты</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
