--- a/src/conts.html
+++ b/src/conts.html
@@ -7,13 +7,14 @@
     <title>Контакты - Контрольная работа 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../stl/stl.css">
+    <link rel="stylesheet" href="../stl/stl.css">
+    <script src="../scr/massage.js"></script>
 </head>
 
 <body>
-    <header class="site-header elements-align-center">
-        <img src="../pho/Minecraftpho.jpeg" width="100">
-        <span>Иус Владимир Витальевич</span>
+    <header class="cherep">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <span class="sas">Иус Владимир Витальевич</span>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -31,9 +32,38 @@
             </div>
         </div>
     </nav>
-    <footer class="site-footer main-margin-top">
-        <span>&copy; 2025</span>
-        <a href="conts.html" class="footer-contacts">Контакты</a>
+    <main class="container main-margin-top">
+        <h1 class="text-left">Свяжитесь со мной</h1>
+        <article class="container">
+            <form id="contactForm">
+                <div class="mb-3 main-margin-top">
+                    <label for="textInput" class="form-label">Ваше имя</label>
+                    <input type="text" class="form-control" id="textInput" placeholder="Введите ваше имя">
+                </div>
+                <div class="mb-3">
+                    <label for="emailInput" class="form-label">Ваш email</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="messageTextarea" class="form-label">Ваше сообщение</label>
+                    <textarea class="form-control" id="messageTextarea" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Отправить сообщение</button>
+            </form>
+        </article>
+        <article class="container main-margin-top container-contacts">
+            <h2>Контакты:</h2>
+            <a href="mailto:student@edu.ru" class="contacts-a"><img src="../assets/email.png" width="32"
+                    alt="...">student@edu.ru</a>
+            <a href="tel:+7(777)777-77-77" class="contacts-a"><img src="../assets/phone-call.png" width="32"
+                    alt="...">+7(777)777-77-77</a>
+            <a href="https://www.google.com/maps/place/Tsentral'nyy,+Dolgoprudny,+Moscow+Oblast,+141707/@55.934892,37.4895948,15z/data=!3m1!4b1!4m14!1m7!3m6!1s0x46b54db65cbb366d:0x8d23b6478eb008b0!2sFSB+Academy!8m2!3d55.6832065!4d37.4701097!16s%2Fm%2F0j_5_k2!3m5!1s0x46b5397c65b16789:0x8014c4b63db31a66!8m2!3d55.9348929!4d37.499916!16s%2Fg%2F122pwsmn?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D"
+                class="contacts-a"><img src="../assets/location.png" width="32" alt="...">Долгопрудный, ул. Лихавевский проспект, д. 68</a>
+        </article>
+    </main>
+    <footer>
+        <span>&copy; 2025 Свяжитесь с нами -> </span>
+        <a href="conts.html" class="footer-contacts"> Контакты</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
