--- a/src/dnevnik.html
+++ b/src/dnevnik.html
@@ -7,13 +7,13 @@
     <title>Дневник - Контрольная работа 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../stl/stl.css">
+    <link rel="stylesheet" href="../stl/stl.css">
 </head>
 
 <body>
-    <header class="site-header elements-align-center">
-        <img src="../pho/Minecraftpho.jpeg" width="100">
-        <span>Иус Владимир Витальевич</span>
+    <header class="cherep">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <span class="sas">Иус Владимир Витальевич</span>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -31,9 +31,34 @@
             </div>
         </div>
     </nav>
-    <footer class="site-footer main-margin-top">
-        <span>&copy; 2025</span>
-        <a href="conts.html" class="footer-contacts">Контакты</a>
+    <main class="container main-margin-top">
+        <h1 class="text-center" aria-label="Учебный прогресс">Мой учебный прогресс</h1>
+        <article class="container container-diary main-margin-top">
+            <p class="p-diary">15 дек - Вёрстка макета сайта  ✓</p>
+            <p class="p-diary">10 дек - JavaScript основы ✓</p>
+            <p class="p-diary">05 дек - Работа с формами  in progress</p>
+            <p class="p-diary">01 дек - Адаптивный дизайн  in progress</p>
+        </article>
+        <h1 class="text-center main-margin-top" aria-label="Текущие курсы">Текущие курсы</h1>
+        <article class="container main-margin-top">
+            <span class="progress-bar__text">Веб-разработка</span>
+            <div class="progress" role="progressbar" aria-label="Веб-разработка" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" style="width: 85%"></div>
+            </div>
+            <span class="progress-bar__text">JavaScript</span>
+            <div class="progress" role="progressbar" aria-label="JavaScript" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" style="width: 75%"></div>
+            </div>
+            <span class="progress-bar__text">React</span>
+            <div class="progress" role="progressbar" aria-label="React" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" style="width: 50%"></div>
+            </div>
+        </article>
+        <button class="btn btn-primary main-margin-top">Добавить запись</button>
+    </main>
+    <footer>
+        <span>&copy; 2025 Свяжитесь с нами -> </span>
+        <a href="conts.html" class="footer-contacts"> Контакты</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
