--- a/src/proekts.html
+++ b/src/proekts.html
@@ -7,14 +7,15 @@
     <title>Проекты - Контрольная работа 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../stl/stl.css">
+    <link rel="stylesheet" href="../stl/stl.css">
 </head>
 
 <body>
-    <header class="site-header elements-align-center">
-        <img src="../pho/Minecraftpho.jpeg" width="100">
-        <span>Иус Владимир Витальевич</span>
+    <header class="cherep">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <span class="sas">Иус Владимир Витальевич</span>
     </header>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -31,9 +32,138 @@
             </div>
         </div>
     </nav>
-    <footer class="site-footer main-margin-top">
-        <span>&copy; 2025</span>
-        <a href="conts.html" class="footer-contacts">Контакты</a>
+
+    <main class="container-fluid main-margin-top">
+        <h1 class="text-center">Мои проекты</h1>
+        <div class="portfolio">
+            <div class="card">
+                <img src="../pho/Projects.png" alt="..." width="200" class="card-image">
+                <div class="card-body">
+                    <h5 class="card-title">Все проекты</h5>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropAll">
+                        Открыть
+                    </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../pho/HTML.png" alt="..." width="200" class="card-image">
+                <div class="card-body">
+                    <h5 class="card-title">HTML</h5>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropAll">
+                        Открыть
+                    </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../pho/JS.jpeg" alt="..." width="200" class="card-image">
+                <div class="card-body">
+                    <h5 class="card-title">JS</h5>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropAll">
+                        Открыть
+                    </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../pho/CSS.png" alt="..." width="200" class="card-image">
+                <div class="card-body">
+                    <h5 class="card-title">CSS</h5>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdropAll">
+                        Открыть
+                    </button>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="modal fade" id="staticBackdropAll" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Все проекты</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="cardAll">
+                            <div class="card-element">
+                                <img src="../pho/HTML.png" alt="..." width="100">
+                                <h5 class="card-title">HTML</h5>
+                            </div>
+                            <div class="card-element">
+                                <img src="../pho/JS.jpeg" alt="..." width="100">
+                                <h5 class="card-title">JS</h5>
+                            </div>
+                            <div class="card-element">
+                                <img src="../pho/CSS.png" alt="..." width="100">
+                                <h5 class="card-title">CSS</h5>
+                            </div>
+                            <div class="card-element">
+                                <img src="../pho/tg.jpeg" alt="..." width="100">
+                                <h5 class="card-title">TG-бот</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="staticBackdropAll" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Все проекты</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="collapse" id="collapseJS">
+            <div class="card card-body">
+                Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда
+                пользователь активирует соответствующий триггер.
+            </div>
+        </div>
+        <div class="collapse" id="collapseReact">
+            <div class="card card-body">
+                Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда
+                пользователь активирует соответствующий триггер.
+            </div>
+        </div>
+        <div>
+            <div class="rpho">
+                <div class="rphoi">
+                    <img src="../pho/1.jpeg" alt="..." width="100">
+                </div>
+                <div class="rphoi">
+                    <img src="../pho/2.jpeg" alt="..." width="100">
+                </div>
+                <div class="rphoi">
+                    <img src="../pho/3.jpeg" alt="..." width="100">
+                </div>
+                <div class="rphoi">
+                    <img src="../pho/4.jpg" alt="..." width="100">
+                </div>
+                <div class="rphoi">
+                    <img src="../pho/5.jpeg" alt="..." width="100">
+                </div>
+                <div class="rphoi">
+                    <img src="../pho/6.jpeg" alt="..." width="100">
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <span>&copy; 2025 Свяжитесь с нами -> </span>
+        <a href="conts.html" class="footer-contacts"> Контакты</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
