--- a/src/conts.html
+++ b/src/conts.html
@@ -51,14 +51,14 @@
                 <button type="submit" class="btn btn-primary">Отправить сообщение</button>
             </form>
         </article>
-        <article class="container main-margin-top container-contacts">
+        <article class="contact">
             <h2>Контакты:</h2>
-            <a href="mailto:student@edu.ru" class="contacts-a"><img src="../assets/email.png" width="32"
+            <a href="mailto:student@edu.ru" class="contacts-a"><img src="../pho/email.png" width="20"
                     alt="...">student@edu.ru</a>
-            <a href="tel:+7(777)777-77-77" class="contacts-a"><img src="../assets/phone-call.png" width="32"
+            <a href="tel:+7(777)777-77-77" class="contacts-a"><img src="../pho/mobile.jpeg" width="20"
                     alt="...">+7(777)777-77-77</a>
             <a href="https://www.google.com/maps/place/Tsentral'nyy,+Dolgoprudny,+Moscow+Oblast,+141707/@55.934892,37.4895948,15z/data=!3m1!4b1!4m14!1m7!3m6!1s0x46b54db65cbb366d:0x8d23b6478eb008b0!2sFSB+Academy!8m2!3d55.6832065!4d37.4701097!16s%2Fm%2F0j_5_k2!3m5!1s0x46b5397c65b16789:0x8014c4b63db31a66!8m2!3d55.9348929!4d37.499916!16s%2Fg%2F122pwsmn?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D"
-                class="contacts-a"><img src="../assets/location.png" width="32" alt="...">Долгопрудный, ул. Лихавевский проспект, д. 68</a>
+                class="contacts-a"><img src="../pho/geo.png" width="20" alt="...">Долгопрудный, ул. Лихавевский проспект, д. 68</a>
         </article>
     </main>
     <footer>
