--- a/src/dnevnik.html
+++ b/src/dnevnik.html
@@ -33,14 +33,14 @@
     </nav>
     <main class="container main-margin-top">
         <h1 class="text-center" aria-label="Учебный прогресс">Мой учебный прогресс</h1>
-        <article class="container container-diary main-margin-top">
+        <article class="dnev-cont">
             <p class="p-diary">15 дек - Вёрстка макета сайта  ✓</p>
             <p class="p-diary">10 дек - JavaScript основы ✓</p>
             <p class="p-diary">05 дек - Работа с формами  in progress</p>
             <p class="p-diary">01 дек - Адаптивный дизайн  in progress</p>
         </article>
         <h1 class="text-center main-margin-top" aria-label="Текущие курсы">Текущие курсы</h1>
-        <article class="container main-margin-top">
+        <article class="dnev-cont2">
             <span class="progress-bar__text">Веб-разработка</span>
             <div class="progress" role="progressbar" aria-label="Веб-разработка" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 85%"></div>
