--- a/src/proekts.html
+++ b/src/proekts.html
@@ -33,11 +33,11 @@
         </div>
     </nav>
 
-    <main class="container-fluid main-margin-top">
+    <main class="big-cont">
         <h1 class="text-center">Мои проекты</h1>
         <div class="portfolio">
             <div class="card">
-                <img src="../pho/Projects.png" alt="..." width="200" class="card-image">
+                <img class="c-m-p" src="../pho/Projects.png" alt="Все проекты" class="card-image">
                 <div class="card-body">
                     <h5 class="card-title">Все проекты</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../pho/HTML.png" alt="..." width="200" class="card-image">
+                <img class="c-m-p" src="../pho/HTML.png" alt="HTML проекты" class="card-image">
                 <div class="card-body">
                     <h5 class="card-title">HTML</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../pho/JS.jpeg" alt="..." width="200" class="card-image">
+                <img class="c-m-p" src="../pho/JS.jpeg" alt="JavaScript проекты" class="card-image">
                 <div class="card-body">
                     <h5 class="card-title">JS</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../pho/CSS.png" alt="..." width="200" class="card-image">
+                <img class="c-m-p" src="../pho/CSS.png" alt="CSS проекты" class="card-image">
                 <div class="card-body">
                     <h5 class="card-title">CSS</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -89,19 +89,19 @@
                     <div class="modal-body">
                         <div class="cardAll">
                             <div class="card-element">
-                                <img src="../pho/HTML.png" alt="..." width="100">
+                                <img src="../pho/HTML.png" alt="HTML проекты">
                                 <h5 class="card-title">HTML</h5>
                             </div>
                             <div class="card-element">
-                                <img src="../pho/JS.jpeg" alt="..." width="100">
+                                <img src="../pho/JS.jpeg" alt="JavaScript проекты">
                                 <h5 class="card-title">JS</h5>
                             </div>
                             <div class="card-element">
-                                <img src="../pho/CSS.png" alt="..." width="100">
+                                <img src="../pho/CSS.png" alt="CSS проекты">
                                 <h5 class="card-title">CSS</h5>
                             </div>
                             <div class="card-element">
-                                <img src="../pho/tg.jpeg" alt="..." width="100">
+                                <img src="../pho/tg.jpeg" alt="Telegram бот">
                                 <h5 class="card-title">TG-бот</h5>
                             </div>
                         </div>
@@ -141,22 +141,22 @@
         <div>
             <div class="rpho">
                 <div class="rphoi">
-                    <img src="../pho/1.jpeg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/1.jpeg" alt="..." width="100">
                 </div>
                 <div class="rphoi">
-                    <img src="../pho/2.jpeg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/2.jpeg" alt="..." width="100">
                 </div>
                 <div class="rphoi">
-                    <img src="../pho/3.jpeg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/3.jpeg" alt="..." width="100">
                 </div>
                 <div class="rphoi">
-                    <img src="../pho/4.jpg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/4.jpg" alt="..." width="100">
                 </div>
                 <div class="rphoi">
-                    <img src="../pho/5.jpeg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/5.jpeg" alt="..." width="100">
                 </div>
                 <div class="rphoi">
-                    <img src="../pho/6.jpeg" alt="..." width="100">
+                    <img class="rphoi img" src="../pho/6.jpeg" alt="..." width="100">
                 </div>
             </div>
         </div>
