--- a/src/conts.html
+++ b/src/conts.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="cherep">
-        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" alt="Лого сайта" width="200">
         <span class="sas">Иус Владимир Витальевич</span>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
