--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="cherep">
-        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" alt="Лого сайта" width="200">
         <span class="sas">Иус Владимир Витальевич</span>
     </header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -33,7 +33,7 @@
     </nav>
     <main class="container main-margin-top">
         <article class="cont-ind">
-            <img src="../pho/monk.png" class="i">
+            <img src="../pho/monk.png" alt="Фото автора сайта" class="i">
             <div class="cont-ind-t">
                 <span>Привет! Я студент группы ЭФБО-06-24<br>Увлекаюсь веб-разработкой</span>
                 <button class="btn btn-primary container-intro__text">Скачать резюме</button>
