--- a/src/proekts.html
+++ b/src/proekts.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="cherep">
-        <img class="he-pho" src="../pho/Minecraftpho.jpeg" width="200">
+        <img class="he-pho" src="../pho/Minecraftpho.jpeg" alt="Лого сайта" width="200">
         <span class="sas">Иус Владимир Витальевич</span>
     </header>
 
@@ -37,7 +37,7 @@
         <h1 class="text-center">Мои проекты</h1>
         <div class="portfolio">
             <div class="card">
-                <img class="c-m-p" src="../pho/Projects.png" alt="Все проекты" class="card-image">
+                <img class="c-m-p" src="../pho/Projects.png" alt="Все проекты">
                 <div class="card-body">
                     <h5 class="card-title">Все проекты</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="c-m-p" src="../pho/HTML.png" alt="HTML проекты" class="card-image">
+                <img class="c-m-p" src="../pho/HTML.png" alt="HTML проекты">
                 <div class="card-body">
                     <h5 class="card-title">HTML</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="c-m-p" src="../pho/JS.jpeg" alt="JavaScript проекты" class="card-image">
+                <img class="c-m-p" src="../pho/JS.jpeg" alt="JavaScript проекты">
                 <div class="card-body">
                     <h5 class="card-title">JS</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="c-m-p" src="../pho/CSS.png" alt="CSS проекты" class="card-image">
+                <img class="c-m-p" src="../pho/CSS.png" alt="CSS проекты">
                 <div class="card-body">
                     <h5 class="card-title">CSS</h5>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -76,7 +76,6 @@
                     </button>
                 </div>
             </div>
-        </div>
         </div>
         <div class="modal fade" id="staticBackdropAll" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -112,12 +111,12 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="staticBackdropAll" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        <div class="modal fade" id="staticBackdropAll1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Все проекты</h1>
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel1">Все проекты</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                     </div>
                     <div class="modal-footer">
