--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -33,10 +33,13 @@
     </nav>
     <main class="container main-margin-top">
         <article class="cont-ind">
-            <img src="../pho/monk.png" alt="Фото автора сайта" class="i">
-            <div class="cont-ind-t">
-                <span>Привет! Я студент группы ЭФБО-06-24<br>Увлекаюсь веб-разработкой</span>
-                <button class="btn btn-primary container-intro__text">Скачать резюме</button>
+            <h3 class="xcont-ind-h3">Автор сайта</h3>
+            <div>
+                <img src="../pho/monk.png" alt="Фото автора сайта" class="i">
+                <div class="cont-ind-t">
+                    <span>Привет! Я студент группы ЭФБО-06-24<br>Увлекаюсь веб-разработкой</span>
+                    <button class="btn btn-primary container-intro__text">Скачать резюме</button>
+                </div>
             </div>
         </article>
         <article class="container container-skills main-margin-top">
