--- a/src/conts.html
+++ b/src/conts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -33,8 +33,8 @@
         </div>
     </nav>
     <main class="container main-margin-top">
-        <h1 class="text-left">Свяжитесь со мной</h1>
         <article class="container">
+            <h1 class="text-left">Свяжитесь со мной</h1>
             <form id="contactForm">
                 <div class="mb-3 main-margin-top">
                     <label for="textInput" class="form-label">Ваше имя</label>
