--- a/src/dnevnik.html
+++ b/src/dnevnik.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -34,6 +34,7 @@
     <main class="container main-margin-top">
         <h1 class="text-center" aria-label="Учебный прогресс">Мой учебный прогресс</h1>
         <article class="dnev-cont">
+            <h3>Даты и дисциплины</h3>
             <p class="p-diary">15 дек - Вёрстка макета сайта  ✓</p>
             <p class="p-diary">10 дек - JavaScript основы ✓</p>
             <p class="p-diary">05 дек - Работа с формами  in progress</p>
@@ -41,6 +42,7 @@
         </article>
         <h1 class="text-center main-margin-top" aria-label="Текущие курсы">Текущие курсы</h1>
         <article class="dnev-cont2">
+            <h3>Состояние изучения</h3>
             <span class="progress-bar__text">Веб-разработка</span>
             <div class="progress" role="progressbar" aria-label="Веб-разработка" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 85%"></div>
